force-app/main/default/objects/HanBaiInfo__c/HanBaiInfo__c.object-meta.xml
<CustomObject>
    <label>販売情報</label>
    <nameField>
        <displayFormat>HB-{0000000000}</displayFormat>
        <label>販売情報ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>