force-app/main/default/objects/HanBaiInfo__c/fields/AnkenInfo__c.field-meta.xml
<CustomField>
    <fullName>AnkenInfo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>案件情報</label>
    <referenceTo>AnkenInfo__c</referenceTo>
    <relationshipLabel>販売情報_案件</relationshipLabel>
    <relationshipName>HanBaiInfos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>