force-app/main/default/objects/HanBaiInfo__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>社員マスタ</label>
    <referenceTo>Employee1__c</referenceTo>
    <relationshipLabel>販売情報</relationshipLabel>
    <relationshipName>HanBaiInfos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>