force-app/main/default/objects/HanBaiInfo__c/fields/HanbaiEndDate__c.field-meta.xml
<CustomField>
    <fullName>HanbaiEndDate__c</fullName>
    <label>販売終了日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>