force-app/main/default/objects/HanBaiInfo__c/fields/HanbaiStartDate__c.field-meta.xml
<CustomField>
    <fullName>HanbaiStartDate__c</fullName>
    <label>販売開始日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>