force-app/main/default/objects/HanBaiInfo__c/fields/Tanka__c.field-meta.xml
<CustomField>
    <fullName>Tanka__c</fullName>
    <label>単価（月）</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>