force-app/main/default/objects/HanBaiInfo__c/fields/toShare__c.field-meta.xml
<CustomField>
    <fullName>toShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>関西シェア</label>
    <type>Checkbox</type>
</CustomField>